--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: GearWalker's playground
+title: GearWalker's wonderland
 email: gearwalker@engineer.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  GearWalker, he's a highly motivated computer engineer who specialize in software, hardware and computer
+  game development. Interested in using technology for solving problems in funny ways.
+  Want to drive world with technology by a tons of knowledge and experience.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://gearwalker.com" # the base hostname & protocol for your site
+url: "https://gearwalker.com" # the base hostname & protocol for your site
 twitter_username: gearwalker
 github_username:  gearwalker
 
